kubManifest/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: sqldb
  labels:
    app.kubernetes.io/name: mysql
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: mywebapp
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app.kubernetes.io/name: mysql
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: mywebapp
